--- a/about.html
+++ b/about.html
@@ -3,57 +3,139 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
-    <!-- Metatag X-UA-Compatible pozwala autorom stron internetowych wybrać, 
-        w jakiej wersji Internet Explorera ma być renderowana strona. 
-        W zależności od obsługiwanych przeglądarek firmy Microsoft dalsze korzystanie z X-UA-Compatibletagu może nie być konieczne.
-        Jeśli potrzebujesz obsługi IE9 lub IE8, polecam użycie tagu. -->
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
 
-    <!-- Tytuł strony -->
     <title>Simple responsive navbar menu</title>
 
-    <!-- Link do stylów resetowania styli
-        Każdy interpreter (np. przeglądarka internetowa) posiada swoje domyślne style,
-        np. domyślne marginesy. W celu zresetowania domyślnych styli można użyć gotowych .css.
-        Przykłady:
-        https://www.youtube.com/watch?v=5e0wuvhxLk4
-        https://css-tricks.com/an-interview-with-elad-shechter-on-the-new-css-reset/#top-of-site
-        https://byby.dev/normalize-css
-        https://meyerweb.com/eric/tools/css/reset/ -->
-    <link rel="stylesheet" href="./css/reset.css" />
+    <!-- <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
+      integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    /> -->
 
-    <!-- Link do stylów lokalnych -->
-    <link rel="stylesheet" href="./css/style-podstrona-1.css" />
-
-    <!-- Link do stylów zewnętrznych bibliotek, np. fontów
-        Nie jest to konieczne dla każdego z projektów i może być dobierane dowolnie
-        - dokumentacja https://www.angularjswiki.com/fontawesome/cdn/
-        - linki do blibliotek https://cdnjs.com/libraries/font-awesome
-        Można umieścić również @import w style.css. Natomiast najpierw ładowany jest index.html a dopiero później style.css, więc w przypadku niedostępności style.css style się rozjadą -->
+    <link rel="stylesheet" href="./css/normalize.css" />
+    <link rel="stylesheet" href="./css/style.css" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap"
+      rel="stylesheet"
+    />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
     />
   </head>
   <body>
-    <nav class="navbar">
-      <a href="#" class="logo">LOGO</a>
-      <input type="checkbox" id="toggler" />
-      <label for="toggler"><i class="ri-menu-line"></i></label>
-      <div class="menu">
-        <ul class="list">
-          <li><a href="#">Strona główna</a></li>
-          <li><a href="#">O nas</a></li>
-          <li><a href="#">Kontakt</a></li>
-        </ul>
+    <header class="header-container">
+      <div class="logo-container">
+        <a href="./index.html" class="logo-link">
+          <img
+            src="./images/logo-sample.png"
+            width="40px"
+            height="40px"
+          />LOGO</a
+        >
       </div>
-    </nav>
-    <p>
-      Lorem ipsum dolor sit amet consectetur, adipisicing elit. Suscipit,
-      voluptates nulla qui repellat tempore adipisci itaque aut molestias
-      voluptate perferendis delectus! Expedita, id nostrum nam debitis est
-      reprehenderit quas distinctio.
-    </p>
+
+      <input type="checkbox" id="menu" hidden />
+      <label for="menu"><i class="fa fa-bars"></i></label>
+
+      <nav class="navigation-container">
+        <label class="navigation-label" for="menu"
+          ><i class="fa-solid fa-xmark"></i
+        ></label>
+        <ul class="list-container">
+          <li class="list-item">
+            <a class="navigation-link" href="./index.html">Strona główna</a>
+          </li>
+          <li class="list-item">
+            <a class="navigation-link" href="./about.html">O nas</a>
+          </li>
+          <li class="list-item">
+            <a class="navigation-link" href="./projects.html">Projekty</a>
+          </li>
+          <li class="list-item">
+            <a class="navigation-link" href="./contact.html">Kontakt</a>
+          </li>
+        </ul>
+      </nav>
+    </header>
+    <div class="text-container">
+      <h1 class="text-header">O nas</h1>
+      <h2 class="text-title">Zapoznaj się z naszą historią</h2>
+      <h3 class="text-subtitle">Założenie firmy</h3>
+      <p class="text-paragraph">
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
+        veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
+        commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
+        velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
+        occaecat cupidatat non proident, sunt in culpa qui officia deserunt
+        mollit anim id est laborum.
+      </p>
+
+      <h3 class="text-subtitle">Nasza ekipa</h3>
+      <p class="text-paragraph">
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
+        veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
+        commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
+        velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
+        occaecat cupidatat non proident, sunt in culpa qui officia deserunt
+        mollit anim id est laborum.
+      </p>
+
+      <h3 class="text-subtitle">Nasze przygody</h3>
+      <p class="text-paragraph">
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
+        veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
+        commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
+        velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
+        occaecat cupidatat non proident, sunt in culpa qui officia deserunt
+        mollit anim id est laborum.
+      </p>
+
+      <h3 class="text-subtitle">Zapoznaj się z nami</h3>
+      <p class="text-paragraph">
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
+        veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
+        commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
+        velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
+        occaecat cupidatat non proident, sunt in culpa qui officia deserunt
+        mollit anim id est laborum.
+      </p>
+
+      <h3 class="text-subtitle">Napisz do nas</h3>
+      <p class="text-paragraph">
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
+        veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
+        commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
+        velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
+        occaecat cupidatat non proident, sunt in culpa qui officia deserunt
+        mollit anim id est laborum.
+      </p>
+    </div>
+    <footer class="footer-container">
+      <nav class="navigation-container">
+        <ul class="list-container">
+          <li class="list-item">
+            <a class="navigation-link" href="./index.html">Strona główna</a>
+          </li>
+          <li class="list-item">
+            <a class="navigation-link" href="./about.html">O nas</a>
+          </li>
+          <li class="list-item">
+            <a class="navigation-link" href="./projects.html">Projekty</a>
+          </li>
+          <li class="list-item">
+            <a class="navigation-link" href="./contact.html">Kontakt</a>
+          </li>
+        </ul>
+      </nav>
+    </footer>
   </body>
 </html>
