--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     /> -->
+
     <link rel="stylesheet" href="./css/normalize.css" />
     <link rel="stylesheet" href="./css/style.css" />
     <link
@@ -28,7 +29,7 @@
   <body>
     <header class="header-container">
       <div class="logo-container">
-        <a href="index.html" class="logo-link">
+        <a href="./index.html" class="logo-link">
           <img
             src="./images/logo-sample.png"
             width="40px"
@@ -40,19 +41,21 @@
       <input type="checkbox" id="menu" hidden />
       <label for="menu"><i class="fa fa-bars"></i></label>
 
-      <nav>
-        <label for="menu"><i class="fa-solid fa-xmark"></i></label>
-        <ul>
-          <li>
-            <a class="navigation-link" href="index.html">Strona główna</a>
+      <nav class="navigation-container">
+        <label class="navigation-label" for="menu"
+          ><i class="fa-solid fa-xmark"></i
+        ></label>
+        <ul class="list-container">
+          <li class="list-item">
+            <a class="navigation-link" href="./index.html">Strona główna</a>
           </li>
-          <li>
+          <li class="list-item">
             <a class="navigation-link" href="./about.html">O nas</a>
           </li>
-          <li>
+          <li class="list-item">
             <a class="navigation-link" href="./projects.html">Projekty</a>
           </li>
-          <li>
+          <li class="list-item">
             <a class="navigation-link" href="./contact.html">Kontakt</a>
           </li>
         </ul>
@@ -116,19 +119,19 @@
         mollit anim id est laborum.
       </p>
     </div>
-    <footer>
-      <nav>
-        <ul>
-          <li>
-            <a class="navigation-link" href="index.html">Strona główna</a>
+    <footer class="footer-container">
+      <nav class="navigation-container">
+        <ul class="list-container">
+          <li class="list-item">
+            <a class="navigation-link" href="./index.html">Strona główna</a>
           </li>
-          <li>
+          <li class="list-item">
             <a class="navigation-link" href="./about.html">O nas</a>
           </li>
-          <li>
+          <li class="list-item">
             <a class="navigation-link" href="./projects.html">Projekty</a>
           </li>
-          <li>
+          <li class="list-item">
             <a class="navigation-link" href="./contact.html">Kontakt</a>
           </li>
         </ul>
