--- a/projects.html
+++ b/projects.html
@@ -14,6 +14,7 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     /> -->
+
     <link rel="stylesheet" href="./css/normalize.css" />
     <link rel="stylesheet" href="./css/style.css" />
     <link
@@ -26,9 +27,9 @@
     />
   </head>
   <body>
-    <header>
-      <div class="logo">
-        <a href="index.html" class="nav-a">
+    <header class="header-container">
+      <div class="logo-container">
+        <a href="./index.html" class="logo-link">
           <img
             src="./images/logo-sample.png"
             width="40px"
@@ -40,21 +41,31 @@
       <input type="checkbox" id="menu" hidden />
       <label for="menu"><i class="fa fa-bars"></i></label>
 
-      <nav>
-        <label for="menu"><i class="fa-solid fa-xmark"></i></label>
-        <ul>
-          <li><a href="#">Strona główna</a></li>
-          <li><a href="#">O nas</a></li>
-          <li><a href="#">Projekty</a></li>
-          <li><a href="#">Kontakt</a></li>
+      <nav class="navigation-container">
+        <label class="navigation-label" for="menu"
+          ><i class="fa-solid fa-xmark"></i
+        ></label>
+        <ul class="list-container">
+          <li class="list-item">
+            <a class="navigation-link" href="./index.html">Strona główna</a>
+          </li>
+          <li class="list-item">
+            <a class="navigation-link" href="./about.html">O nas</a>
+          </li>
+          <li class="list-item">
+            <a class="navigation-link" href="./projects.html">Projekty</a>
+          </li>
+          <li class="list-item">
+            <a class="navigation-link" href="./contact.html">Kontakt</a>
+          </li>
         </ul>
       </nav>
     </header>
-    <div class="container-text">
-      <h1 class="header-text">Projekty</h1>
-      <h2 class="title-text">Zrelizowane projekty</h2>
-      <h3 class="subtitle-text">Projekt - 1</h3>
-      <p class="paragraph-text">
+    <div class="text-container">
+      <h1 class="text-header">Nasze projekty</h1>
+      <h2 class="text-title">Zobacz co realizowaliśmy</h2>
+      <h3 class="text-subtitle">Projekt - 1</h3>
+      <p class="text-paragraph">
         Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
         tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
         veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
@@ -64,8 +75,8 @@
         mollit anim id est laborum.
       </p>
 
-      <h3 class="subtitle-text">Projekt - 2</h3>
-      <p class="paragraph-text">
+      <h3 class="text-subtitle">Projekt - 2</h3>
+      <p class="text-paragraph">
         Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
         tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
         veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
@@ -75,8 +86,8 @@
         mollit anim id est laborum.
       </p>
 
-      <h3 class="subtitle-text">Projekt - 3</h3>
-      <p class="paragraph-text">
+      <h3 class="text-subtitle">Projekt - 3</h3>
+      <p class="text-paragraph">
         Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
         tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
         veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
@@ -86,8 +97,8 @@
         mollit anim id est laborum.
       </p>
 
-      <h3 class="subtitle-text">Projekt - 4</h3>
-      <p class="paragraph-text">
+      <h3 class="text-subtitle">Projekt - 4</h3>
+      <p class="text-paragraph">
         Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
         tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
         veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
@@ -97,8 +108,8 @@
         mollit anim id est laborum.
       </p>
 
-      <h3 class="subtitle-text">Projekt - 5</h3>
-      <p class="paragraph-text">
+      <h3 class="text-subtitle">Projekt - 5</h3>
+      <p class="text-paragraph">
         Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
         tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
         veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
@@ -108,13 +119,21 @@
         mollit anim id est laborum.
       </p>
     </div>
-    <footer>
-      <nav>
-        <ul>
-          <li><a href="#">Strona główna</a></li>
-          <li><a href="#">O nas</a></li>
-          <li><a href="#">Projekty</a></li>
-          <li><a href="#">Kontakt</a></li>
+    <footer class="footer-container">
+      <nav class="navigation-container">
+        <ul class="list-container">
+          <li class="list-item">
+            <a class="navigation-link" href="./index.html">Strona główna</a>
+          </li>
+          <li class="list-item">
+            <a class="navigation-link" href="./about.html">O nas</a>
+          </li>
+          <li class="list-item">
+            <a class="navigation-link" href="./projects.html">Projekty</a>
+          </li>
+          <li class="list-item">
+            <a class="navigation-link" href="./contact.html">Kontakt</a>
+          </li>
         </ul>
       </nav>
     </footer>
